--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ HOSTNAME=localhost
 PORT=8082
 
 
-MONGODB_URI='mongodb+srv://Saikat:Abcd1234@cluster0.4yhpu.mongodb.net/?retryWrites=true&w=majority'
+MONGODB_URI='mongodb+srv://Saikat:Abcd1234@cluster0.4yhpu.mongodb.net/Assign?retryWrites=true&w=majority'
